--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "astro": "^5.13.7",
     "@astrojs/react": "^3.6.2",
+    "@astrojs/mdx": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
